--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-Installation of rev 1.6.1:
+Installation of rev 1.7.:
 ------------------------
 
 0) make sure the phpsoap extension (for php5 !)  in installed on the Moodle server
@@ -7,6 +7,10 @@ provided in wspp/lib  folder is supported (on client only) but with a big penalt
  of speed and memory ... 
 
 1) unzip the wspp_xxx.zip into your main Moodle installation folder
+
+
+MOODLE 1.9 :
+---------------
 
 2) copy wspp/lang/fr_utf8/wspp.php (and possibly other languages files) 
 into your moodledata/lang/en_utf8_local folder . You may have to create
@@ -29,6 +33,20 @@ erase it.
   (even unsuccessfull). It will add two tables mdl_webservices_sessions and 
   mdl_webservices_clients_allow
  
+ 
+ MOODLE 2.0
+ -----------
+ 2) just copy wspp/local directory into Moodle 2.0 local directory
+ 
+ 3) go to administration, notifications to install it
+ 
+ 4) you should get a new configuration screen named OK Tech Webservices (aka wspp) inside 
+ Site Adminstration/ Development 
+ 
+ 5) Database upgrade is done at this stage  
+ 
+ ALL MOODLE VERSIONS :
+ -------------------- 
  
  6) test the Web Service login operation. The easiest way is surely using SoapUI graphical
  interface. 
