ws ajout add_users_to_cohort add_users_to_group + remove operations
git-svn-id: file:///home/svn2/moodle/moodle.195/wspp@440 47220bad-2fbe-4483-8024-c4516a9bd1b0

--- a/INSTALL
+++ b/INSTALL
@@ -12,7 +12,7 @@ provided in wspp/lib  folder is supported (on client only) but with a big penalt
 MOODLE 1.9 :
 ---------------
 
-2) copy wspp/lang/fr_utf8/wspp.php (and possibly other languages files) 
+2) copy wspp/lang/fr_utf8/local_wspp.php (and possibly other languages files) 
 into your moodledata/lang/en_utf8_local folder . You may have to create
 this folder. This will prevent future upgrades of moodle languages packs to
 erase it.
