--- a/INSTALL
+++ b/INSTALL
@@ -7,6 +7,7 @@ provided in wspp/lib  folder is supported (on client only) but with a big penalt
  of speed and memory ... 
 
 1) unzip the wspp_xxx.zip into your main Moodle installation folder
+2) yoou should get a top level directory named wspp
 
 
 MOODLE 1.9 :
