typo in  top level README

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-copy the directory wspp at the top leval of your moodle installation
+copy the directory wspp at the top level of your moodle installation
 and read the wspp/INSTALL file.
 
 Enjoy.
