--- a/README
+++ b/README
@@ -3,4 +3,6 @@ and read the wspp/INSTALL file.
 
 For (optional) integration to official Moodle 2.0 infrastructure, see moodle2integration/README
 
+More docs on the wiki https://github.com/patrickpollet/moodlews/wiki
+
 Enjoy.
