--- a/README
+++ b/README
@@ -3,6 +3,6 @@ and read the wspp/INSTALL file.
 
 For (optional) integration to official Moodle 2.0 infrastructure, see moodle2integration/README
 
-More docs on the wiki https://github.com/patrickpollet/moodlews/wiki
+More docs on the wiki <a href="https://github.com/patrickpollet/moodlews/wiki">  https://github.com/patrickpollet/moodlews/wiki </a>
 
 Enjoy.
